# BR-Assistant-Clone

./: README.md
.devcontainer/: devcontainer.json
backend/: .gitignore  README.md  pyproject.toml
backend/src/: app.py  chatlogic.py  chatlogic_modify.py  custom_tools.py  tools.py
backend/src/files/: recipe.csv
database/: fetch.py  populate_table.py  recipe.csv
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ChatHistory.jsx  ChatMessage.jsx  InputForm.jsx  QuestionForm.jsx
mpcs_database_mock/: docker-compose.yml  schema.sql
